<resources>
    <string name="app_name">ChangeMyView</string>
    <string name="mainTitle">Main Menu: Go to your matches, or see a list of topics.</string>
    <string name="buttonTopics">Topics</string>
    <string name="buttonMatches">Matches</string>
    <string name="positionFor">For</string>
    <string name="positionAgainst">Against</string>
    <string name="report_user">Report User</string>
    <string name="position_intro">Please indicate your position on the following topic:</string>
    <string name="topic_intro">Tap a topic to select or change your position:</string>
    <string name="topic_to_menu">Return to main menu</string>
    <string name="topic_to_matches">Go to matches</string>
    <string name="help">Help</string>
    <string name="help_menu1">   In this application, you may select a controversial topic to be for or against. As soon as someone else marks an opposing viewpoint on your topic
        their email will appear in your matches. If you do not see any matches, then come visit the app the next day to check if you have been paired.</string>
    <string name="help_menu2">   This is a place to have your viewpoints on life challenged in a respectful way. If you are harassed by another user,
        please report them by using our report feature. We will make sure to take appropriate action.</string>
    <string name="help_menu3">   Have fun and keep an open mind!</string>

    <string-array name="topics_list">
        <item>Anti vaxxers being forced to vaccinate their kids</item>
        <item>Abortions being legal</item>
        <item>Allowing twitter to fact check government officials</item>
        <item>Legalization of marijuana</item>
        <item>Free healthcare</item>
        <item>Euthanization of terminally ill patients</item>
        <item>Death Penalty</item>
        <item>Minimum drinking age of 18</item>
        <item>Every Citizen should get a free pony</item>
    </string-array>
    <string name="title_activity_report_user">ReportUserActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="match_intro">Your matches. Select one to start a discussion.</string>
    <string name="match_email_text">match email goes here</string>
    <string name="topic_list_text">Your topics include:</string>
    <string name="conversation_button_text">Start a Conversation!</string>
    <string name="register_new_user_text">Register New User</string>
    <string name="new_username_text">Enter New Username</string>
    <string name="password_text">Enter Your Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="email_text">Enter Your Email</string>
    <string name="report_user_text">Report User</string>
    <string name="userEmail_text">Email</string>
    <string name="reason_text">Reason For Reporting</string>
    <string name="submit_text">Submit</string>
    <string name="welcome_text">Welcome, please log in or register a new account</string>
    <string name="username_text">Username</string>
    <string name="password_text_short">Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>

</resources>