<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/mainTitle"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="150dp" />

    <Button
        android:id="@+id/matchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTopics"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="331dp" />

    <Button
        android:id="@+id/topicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMatches"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="334dp" />
</androidx.constraintlayout.widget.ConstraintLayout>