<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportUserActivity"
    tools:ignore="ExtraText">

    // Title of the activity
    <TextView
        android:id="@+id/Report"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/report_user_text"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@id/userEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    // Text field to enter the email of the person you would like ot report
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/userEmail_text"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/Reason"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Report" />

    // Text field to enter the reason for reporting this user
    <EditText
        android:id="@+id/Reason"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/reason_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Submit" />

    // Button for submitting the report
    <Button
        android:id="@+id/Submit"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Reason" />
</androidx.constraintlayout.widget.ConstraintLayout>