<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopicsActivity">

    <TextView
        android:id="@+id/topic_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inner_frame_layout_padding"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:text="@string/topic_intro"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ListView
        android:id="@+id/topics_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/inner_frame_layout_padding"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        app:layout_constraintTop_toBottomOf="@id/topic_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topic_to_matches"
        />

    <Button
        android:id="@+id/topic_to_menu"
        android:text="@string/topic_to_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/topic_to_matches"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        />
    <Button
        android:id="@+id/topic_to_matches"
        android:text="@string/topic_to_matches"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/topic_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
